# fastllm-windows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_EN.md  build.ps1  ftllm.cpp  main.cpp  setup-env.ps1  点我启动编译.bat
.github/workflows/: Build.yml  build-all.yml  build-linux.yml  build-macos.yml  build-windows.yml  sync-upstream.yml
.trae/documents/: 修复构建配置与 Python 绑定问题.md
docs/: demo_arguments.md  english_demo_arguments.md  ftllm.md  performance_extension_guide.md  version.md  使用说明.md
example/FastllmStudio/cli/: cli.cpp  ui.cpp
example/apiserver/: apiserver.cpp
example/benchmark/: benchmark.cpp
example/webui/: webui.cpp
include/: fastllm.h
include/devices/cpu/: alivethreadpool.h
include/devices/cuda/: fastllm-cuda.cuh
include/models/: basellm.h
include/utils/: avxMath.h  chat_handler.h  console.h  help_text.h  help_text.json  inference_stats.h  log_handler.h  utils.h
pyfastllm/fastllm/utils/: __init__.py  log_handler.py
src/: chat_handler.cpp  fastllm.cpp  model.cpp  pybinding.cpp  template.cpp
src/devices/cpu/: amx.cpp  avx2.cpp  cpudevice.cpp
src/devices/multicuda/: fastllm-multicuda.cu
src/models/: basellm.cpp  bert.cpp  chatglm.cpp  cogvlm.cpp  deepseekv2.cpp  ernie4_5.cpp  glm4_moe.cpp  gpt_oss.cpp  graphllm.cpp  hunyuan.cpp  llama.cpp  minimax.cpp  moe.cpp  moss.cpp  pangu_moe.cpp  qwen.cpp  qwen3.cpp  qwen3_moe.cpp  qwen3_next.cpp
test/ops/: tokenizerTest.cpp
tools/fastllm_pytools/: __init__.py  __main__.py  chat.py  console.py  download.py  ftllm.cmd  help_text.py  install-deps.cmd  llm.py  requirements.txt  server.py  util.py
tools/fastllm_pytools/openai_server/: fastllm_completion.py  fastllm_model.py
tools/fastllm_pytools/openai_server/protocal/: openai_protocol.py
tools/fastllm_pytools/openai_server/tool_parsers/: abstract_tool_parser.py
tools/src/: pytools.cpp
